Updated a code and readme